<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page" >

    <LinearLayout
        style="@style/match_match"
        android:orientation="vertical" >

        <Button
            android:id="@+id/tvSelectLogin"
            style="@style/match_wrap"
            android:text="@string/login" />

        <TextView
            style="@style/select_name"
            android:text="@string/post"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnSelectPost"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/put" />

        <Button
            android:id="@+id/btnSelectPut"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/delete"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnSelectDelete"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/get"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/select_name"
            android:text="@string/single" />

        <Button
            android:id="@+id/btnSelectSingle"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/columns" />

        <Button
            android:id="@+id/btnSelectColumns"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/rely" />

        <Button
            android:id="@+id/btnSelectRely"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/array" />

        <Button
            android:id="@+id/btnSelectArray"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/complex" />

        <Button
            android:id="@+id/btnSelectComplex"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/access_error" />

        <Button
            android:id="@+id/btnSelectAccessError"
            style="@style/select_json" />

        <TextView
            style="@style/select_name"
            android:text="@string/access_permitted" />

        <Button
            android:id="@+id/btnSelectAccessPermitted"
            style="@style/select_json" />

        <Button
            style="@style/match_wrap"
            android:layout_marginTop="30dp"
            android:onClick="toAuto"
            android:text="@string/auto" />

        <Button
            style="@style/match_wrap"
            android:layout_marginTop="30dp"
            android:onClick="toUnit"
            android:text="@string/unit" />

        <Button
            android:onClick="toUpdateLog"
            style="@style/match_wrap"
            android:layout_marginTop="30dp"
            android:text="@string/update_log" />
    </LinearLayout>

</ScrollView>