<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.UnitAutoActivity"
    >

    <ScrollView
        style="@style/match_match"
        android:layout_weight="1" >

        <LinearLayout
            style="@style/match_match"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvUnitRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="top|left"
                android:hint="request"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/tvUnitResponse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_weight="2"
                android:background="@null"
                android:gravity="top|left"
                android:hint="response"
                android:onClick="copy"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_height="45dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/tvUnitOrient"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="orient"
            android:text="Horizontal" />

        <Button
            android:id="@+id/tvUnitStop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/stop"
            android:onClick="stop"
            />

        <TextView
            android:text="@string/port"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/etUnitPort"
            android:hint="8080"
            android:inputType="number"
            android:maxLength="6"
            android:minEms="2"
            android:digits="1234567890"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="true"
            />

        <ProgressBar
            android:id="@+id/pbUnit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/tvUnitStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start"
            android:onClick="start"
            />

    </LinearLayout>

</LinearLayout>
